[package]
name = "learning"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
env_logger = "0.11.10"
log = "0.4.29"
pollster = "0.4.0"
wgpu = { version = "29.0.3", features = ["webgl"]}
winit = { version = "0.30.13", features = ["android-native-activity"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[package.metadata.wasm-pack.profile.release]
wasm-opt = false